project(practice2)

add_executable(mcp "matrix\ chain\ product/mcp.cpp")
add_executable(lcs "longest\ common\ subsequence/lcs.cpp")
add_executable(lcstring "longest\ common\ substring/lcstring.cpp")
add_executable(max_sum "max\ subarray\ sum/max_sum.cpp")
add_executable(multistages_graph "shortest\ paths\ in\ multistage\ graph/multistages_graph.cpp")