project(practice3)

add_executable(01knapsack 01knapsack/01knapsack.cpp)
add_executable(fractional_knapsack fractional_knapsack/fractional_knapsack.cpp)
add_executable(sjf scheduel/sjf.cpp)
add_executable(dijistra singlesource_shortestpath/dijistra.cpp)
add_executable(floyd allpair_shortestpath/floyd.cpp)